We switched back to four spaces.

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist = py27,py33
 whitelist_externals=/usr/bin/make
 [pep8]
-ignore = E111,E121
+# ignore =
 max-line-length = 80
 [testenv]
 setenv =
