Run tests under Python3, too.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
 envlist = py27,py33
+minversion=1.6
 whitelist_externals=/usr/bin/make
 [pep8]
 # ignore =
@@ -9,5 +10,6 @@ setenv =
     TIMEZONE=UTC
     TZ=UTC
 commands =
+    {envpython} setup.py build_ext --inplace
     nosetests
 deps = -rrequirements.txt
