--- a/tox.ini
+++ b/tox.ini
@@ -11,5 +11,6 @@ setenv =
     TZ=UTC
 commands =
     {envpython} setup.py build_ext --inplace
+    {envpython} setup.py develop
     nosetests
 deps = -rrequirements.txt
