--- a/orges/circle.yml
+++ b/orges/circle.yml
@@ -2,10 +2,6 @@ machine:
   timezone:
     Europe/Berlin
 
-dependencies:
-  post:
-    - pip install -r ../requirements.txt
-
 test:
   override:
-    - nosetests
+    - python ../setup.py test
