--- a/.isort.cfg
+++ b/.isort.cfg
@@ -5,7 +5,7 @@ line_length=79
 # known_standard_libary=std,std2
 known_third_party=windml
 # known_first_party=mylib1,mylib2
-#indent='    ' # will default to four spaces and fail when configured
+indent='    '
 multi_line_output=2
 length_sort=False
 #forced_separate=django.contrib,django.utils
