--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ setenv =
     TIMEZONE=UTC
     TZ=UTC
 commands =
-    {envpython} setup.py build_ext --inplace
+    {envpython} setup.py build_ext
     {envpython} setup.py develop
     nosetests
 deps = -rrequirements.txt
