--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ python:
   - "3.3"
 script:
   - python setup.py build_ext --inplace
-  #Temporal solution to travis issue #155
+  # Temporary solution to travis issue #155
   - sudo rm -rf /dev/shm && sudo ln -s /run/shm /dev/shm
   - python setup.py test
