replace pep8 with flake8

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,25 @@
+[flake8]
+exclude = .svn,CVS,.bzr,.hg,.git,__pycache__
+filename = orges/*.py
+select = E,W,I
+# ignore
+max-line-length = 79
+hang-closing = 0
+count = 1
+format=default
+quiet = 0
+show-pep8 = 1
+show-source = 1
+statistics = 1
+verbose = 0
+#builtins =
+max-complexity = 12
+
 [tox]
 envlist = py27,py33
 minversion=1.6
 whitelist_externals=/usr/bin/make
-[pep8]
-# ignore =
-max-line-length = 80
+
 [testenv]
 setenv =
     TIMEZONE=UTC
