--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ develop-eggs
 lib
 lib64
 __pycache__
+/venv/
 
 # Installer logs
 pip-log.txt
@@ -45,6 +46,9 @@ Session.vim
 # Sublime Text project files
 *.sublime-project
 *.sublime-workspace
+
+# Coverage's output
+/htmlcov/
 
 # Sphinx' Output
 /docs/_build
