--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ script:
   - python setup.py build_ext --inplace
   # Temporary solution to travis issue #155
   - sudo rm -rf /dev/shm && sudo ln -s /run/shm /dev/shm
-  - python setup.py test
+  - make test
