--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,11 @@
 [build_ext]
 inplace=1
+
+[nosetests]
+verbosity=0
+detailed-errors=1
+with-coverage=1
+cover-package=orges
+debug=nose.loader
+pdb=1
+pdb-failures=1
