move tests and examples to repository root.
They would have cluttered Orges' actual packages.

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -4,7 +4,7 @@ line_length=79
 # skip=file3.py,file4.py
 # known_standard_libary=std,std2
 known_third_party=windml
-# known_first_party=mylib1,mylib2
+known_first_party=tests,examples
 indent='    '
 multi_line_output=2
 length_sort=False
