complete test move, split requirements

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ verbose = 0
 max-complexity = 12
 
 [tox]
-envlist = py27,py33
+envlist = py25,py26,py27,py32,py33
 minversion=1.6
 whitelist_externals=/usr/bin/make
 
@@ -26,6 +26,12 @@ setenv =
     TZ=UTC
 commands =
     {envpython} setup.py build_ext
-    {envpython} setup.py develop
+#    {envpython} setup.py develop
     nosetests
-deps = -rrequirements.txt
+deps = -rrequirements_tests.txt
+
+[testenv:py25]
+deps = -rrequirements_py25.txt
+
+[testenv:py26]
+deps = -rrequirements_py26.txt
