Run examples when building documentation

--- a/docs/_themes/flask/theme.conf
+++ b/docs/_themes/flask/theme.conf
@@ -2,8 +2,9 @@
 inherit = basic
 stylesheet = flasky.css
 pygments_style = flask_theme_support.FlaskyStyle
+show_source = False
 
 [options]
-index_logo = ''
-index_logo_height = 120px
-touch_icon = 
+#index_logo = None
+#index_logo_height = 120px
+#touch_icon =
