--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,11 +1,15 @@
 [settings]
+#balanced_wrapping=False
+#length_sort=False
 line_length=79
+# forced_separate=django.contrib,django.utils
+# force_single_line=False  # mutex with multi_line_output
 # force_to_top=file1.py,file2.py
-# skip=file3.py,file4.py
+indent='    '
+known_first_party=tests,examples
 # known_standard_libary=std,std2
 known_third_party=windml
-known_first_party=tests,examples
-indent='    '
 multi_line_output=2
-length_sort=False
-#forced_separate=django.contrib,django.utils
+order_by_type=True
+# skip=file3.py,file4.py
+
