explicite isort config
false settings work since latest release

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,6 +1,6 @@
 [settings]
-#balanced_wrapping=False
-#length_sort=False
+balanced_wrapping=False
+length_sort=False
 line_length=79
 # forced_separate=django.contrib,django.utils
 # force_single_line=False  # mutex with multi_line_output
