--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
   - "3.2"
   - "3.3"
 install:
-  - install: "a=(`python --version 2>&1`); a=(`echo ${a[1]} | cut -c -3`); pip install -r requirements_`python -c 'import sys; print(str(sys.version_info.major) + str(sys.version_info.minor))'`.txt --use-mirrors"
+  - install: "pip install -r requirements_py`python -c 'import sys; print(str(sys.version_info.major) + str(sys.version_info.minor))'`.txt --use-mirrors"
 script:
   # Temporary solution to travis issue #155
   - sudo rm -rf /dev/shm && sudo ln -s /run/shm /dev/shm
