--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,14 @@ python:
   - "3.2"
   - "3.3"
 install:
-    - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then pip install -r requirements_py2.6.txt; fi
-    - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then pip install -r requirements_py2.7.txt; fi
-    - if [[ $TRAVIS_PYTHON_VERSION == '3.2' ]]; then pip install -r requirements_py3.2.txt; fi
-    - if [[ $TRAVIS_PYTHON_VERSION == '3.3' ]]; then pip install -r requirements_py3.3.txt; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then pip install -r requirements_py2.6.txt; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then pip install -r requirements_py2.7.txt; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == '3.2' ]]; then pip install -r requirements_py3.2.txt; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == '3.3' ]]; then pip install -r requirements_py3.3.txt; fi
+  - pip install -r requirements_coverage.txt
 script:
   # Temporary solution to travis issue #155
   - sudo rm -rf /dev/shm && sudo ln -s /run/shm /dev/shm
   - make test
+after_success:
+  - coveralls
