--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,4 +1,8 @@
 [settings]
+# Imports to add consistently to every file. Useful for __future__ imports.
+# Defaults to None.
+#add_imports=from __future__ import absolute_import, division, print_function, unicode_literals, with_statement
+
 # If set to true - for each multi-line import statement isort will dynamically
 # change the import length to the one that produces the most balanced grid,
 # while staying below the maximum import length defined.
@@ -10,7 +14,7 @@ combine_star=False
 
 # The default section to place imports in, if their section can not be
 # automatically determined.
-# default_section
+#default_section=
 
 # If set to true - imports will be sorted by their length instead of
 # alphabetically.
@@ -27,20 +31,20 @@ line_lenght=79
 # force_single_line=False  # mutex with multi_line_output
 
 # A comment to consistently place directly above future imports.
-import_heading_future="from __future__ import division, print_function, with_statement"
+import_heading_future=Future
 
 # A comment to consistently place directly above imports from the standard library.
-#import_heading_stdlib
+import_heading_stdlib=Standard Library
 
 # A comment to consistently place directly above thirdparty imports.
-#import_heading_thirdparty
+import_heading_thirdparty=Third Party
 
 # A comment to consistently place directly above imports from the current
 # project.
-#import_heading_firstparty
+import_heading_firstparty=First Party
 
 # A comment to consistently place directly above imports that start with '.'.
-#import_heading_localfolder
+import_heading_localfolder=Local
 
 # An integer that represents the number of spaces you would like to indent by or
 # Tab to indent by a single tab.
@@ -48,7 +52,7 @@ indent='    '
 
 # A list of imports that will be forced to display withing the first party
 # category.
-known_first_party=tests,examples
+known_first_party=examples
 
 # A list of imports that will be forced to display withing the standard library
 # category.
@@ -71,7 +75,7 @@ order_by_type=True
 # skip=file3.py,file4.py
 
 # A list of modules that you want to appear in their own separate section.
-#forced_separate
+#forced_separate=file1.py,file2.py
 
 # Forces a list of imports to the top of their respective section. This works
 # well for handling the unfortunate cases of import dependencies that occur in
@@ -79,7 +83,7 @@ order_by_type=True
 # force_to_top=file1.py,file2.py
 
 # A list of files to never skip sorting.
-#not_skip
+#not_skip=
 
 # If set to true - isort will only change a file in place if the resulting file
 # has correct Python syntax. This defaults to false because it can only work if
@@ -99,5 +103,4 @@ combine_as_imports=False
 
 # If set to true - isort will add imports even if the file specified is
 # currently completely empty.
-#force_adds
-
+force_adds=False
