remove test prefix from tests, configure nose accordingly

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,19 @@
 [build_ext]
 inplace=1
+
 [wheel]
 universal = 1
+
+[nosetests]
+verbosity=2
+detailed-errors=1
+with-coverage=0
+with-doctest=1
+cover-package=metaopt
+#debug=nose.loader
+pdb=0
+pdb-errors=0
+pdb-failures=0
+nocapture=1
+where=metaopt/test/
+all-modules=1
