--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ verbose = 0
 max-complexity = 12
 
 [tox]
-envlist = py25,py26,py27,py32,py33
+envlist = py25,py26,py27,py32,py33,py34
 minversion=1.6
 whitelist_externals=/usr/bin/make
 
@@ -26,15 +26,29 @@ setenv =
     TZ=UTC
 commands =
     {envpython} setup.py build_ext
-#    {envpython} setup.py develop
     nosetests
-deps = -rrequirements_tests.txt
 
 [testenv:py25]
-deps = -rrequirements_py2.5.txt
+deps =
+    -rrequirements_py2.5.txt
+    -rrequirements_test.txt
 
 [testenv:py26]
-deps = -rrequirements_py2.6.txt
+deps =
+    -rrequirements_py2.6.txt
+    -rrequirements_test.txt
+
+[testenv:py27]
+deps =
+    -rrequirements_py2.7.txt
+    -rrequirements_test.txt
 
 [testenv:py33]
-deps = -rrequirements_py3.3.txt
+deps =
+    -rrequirements_py3.3.txt
+    -rrequirements_test.txt
+
+[testenv:py34]
+deps =
+    -rrequirements_py3.4.txt
+    -rrequirements_test.txt
