add make target test-coverage to enable tests without coverage
also reorder open/start/xdg-open commands from most to least specific to
minimize conflicts

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ install:
 script:
   # Temporary solution to travis issue #155
   - sudo rm -rf /dev/shm && sudo ln -s /run/shm /dev/shm
-  - make test
+  - make test-coverage
 after_success:
   - coveralls
