clean up imports using isort

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -52,7 +52,7 @@ indent='    '
 
 # A list of imports that will be forced to display withing the first party
 # category.
-known_first_party=examples
+known_first_party=examples,metaopt
 
 # A list of imports that will be forced to display withing the standard library
 # category.
