comment out pdb config to allow for nosetests <= 1.3.1

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,9 +11,9 @@ with-coverage=0
 with-doctest=1
 cover-package=metaopt
 #debug=nose.loader
-pdb=0
-pdb-errors=0
-pdb-failures=0
+#pdb=0
+#pdb-errors=0
+#pdb-failures=0
 nocapture=1
 where=metaopt/tests/
 all-modules=1
