Fix typo in isort.cfg

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -22,7 +22,7 @@ length_sort=False
 
 # An integer that represents the longest line-length you want a single import to
 # take. Defaults to 80.
-line_lenght=79
+line_length=79
 
 # forced_separate=django.contrib,django.utils
 
